service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helios-client-app-service
spec:
  selector:
    app: helios-client-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
