ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: helios-client-app-ingress
spec:
  rules:
    - host: helios-medicare.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: helios-client-app-service
                port:
                  number: 80
